# io-streams

./: .gitignore  .travis.yml  CONTRIBUTORS  LICENSE  README.md  Types.hs  cabal.haskell-ci  changelog.md  io-streams.cabal  runTestsAndCoverage.sh  streams-simple.cabal
.github/workflows/: haskell-ci.yml
src/System/IO/: Streams.hs
src/System/IO/Streams/: Attoparsec.hs  Blaze.hs  Builder.hs  ByteString.hs  Combinators.hs  Concurrent.hs  Core.hs  Debug.hs  File.hs  Handle.hs  Internal.hs  List.hs  Network.hs  Process.hs  Text.hs  Tutorial.hs  Vector.hs  Zlib.hs
src/System/IO/Streams/Attoparsec/: ByteString.hs  Text.hs
src/System/IO/Streams/Internal/: Attoparsec.hs  BoyerMooreHorspool.hs  Network.hs  Search.hs
test/: TestSuite.hs
test/System/IO/Streams/Tests/: Attoparsec.hs  Blaze.hs  Builder.hs  ByteString.hs  Combinators.hs  Common.hs  Concurrent.hs  Debug.hs  File.hs  Handle.hs  Internal.hs  List.hs  Network.hs  Process.hs  Text.hs  Vector.hs  Zlib.hs
test/System/IO/Streams/Tests/Attoparsec/: ByteString.hs  Text.hs
