Name:                io-streams
Version:             0.1
License:             BSD3
License-file:        LICENSE
Category:            Data
Build-type:          Simple
Cabal-version:       >= 1.10
Synopsis:            Simple and easy-to-use I/O using streams
Description:
  The io-streams library contains simple and easy to use primitives for I/O
  using streams. Based on simple types with one type parameter (@InputStream a@
  and @OutputStream a@), io-streams provides a basic interface to
  side-effecting input and output in @IO@ monad with the following
  features:
  .
    * three fundamental I/O primitives that anyone can understand: @read ::
      InputStream a -> IO (Maybe a)@, @unRead :: a -> InputStream a -> IO ()@,
      and @write :: Maybe a -> OutputStream a -> IO ()@.
  .
    * simple types and side-effecting IO operations mean straightforward and
      simple exception handling and resource cleanup using standard Haskell
      facilities like @bracket@.
  .
    * code to transform files, handles, and sockets to streams
  .
    * a variety of combinators for wrapping and transforming streams, including
      compression and decompression using zlib, controlling precisely how many
      bytes are read to or written from a socket, buffering output using
      @blaze-builder@, etc.
  .
    * support for parsing from streams using @attoparsec@.

Extra-Source-Files:  CONTRIBUTORS

------------------------------------------------------------------------------
Flag portable
  Description: Compile in cross-platform mode. No platform-specific code or
               optimizations such as C routines will be used.
  Default: False


------------------------------------------------------------------------------
Library
  hs-source-dirs:    src
  Default-language:  Haskell2010

  ghc-options:       -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
                     -fno-warn-unused-do-bind

  Exposed-modules:   System.IO.Streams,
                     System.IO.Streams.Attoparsec,
                     System.IO.Streams.Blaze,
                     System.IO.Streams.ByteString,
                     System.IO.Streams.Combinators,
                     System.IO.Streams.Handle,
                     System.IO.Streams.File,
                     System.IO.Streams.List,
                     System.IO.Streams.Zlib,
                     System.IO.Streams.Internal

  Other-modules:     System.IO.Streams.Internal.BoyerMooreHorspool

  Build-depends:     base          >= 4     && <5,
                     attoparsec    >= 0.10  && <0.11,
                     blaze-builder >= 0.3.1 && <0.4,
                     bytestring    >= 0.9.2 && <0.10,
                     time          >= 1.4   && <1.5,
                     vector        >= 0.9   && <0.10,
                     zlib-bindings >= 0.1   && <0.2

  other-extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    OverloadedStrings

  if flag(portable) || os(windows)
    cpp-options: -DPORTABLE
  else
    build-depends: bytestring-mmap >= 0.2 && <0.3,
                   unix            >= 2.5 && <3.0


------------------------------------------------------------------------------
Test-suite testsuite
  Type:              exitcode-stdio-1.0
  hs-source-dirs:    src test
  Main-is:           TestSuite.hs
  Default-language:  Haskell2010

  Other-modules:     System.IO.Streams.Tests.Blaze,
                     System.IO.Streams.Tests.ByteString,
                     System.IO.Streams.Tests.Combinators,
                     System.IO.Streams.Tests.Common,
                     System.IO.Streams.Tests.File,
                     System.IO.Streams.Tests.Handle,
                     System.IO.Streams.Tests.Internal,
                     System.IO.Streams.Tests.Zlib,
                     System.IO.Streams,
                     System.IO.Streams.Attoparsec,
                     System.IO.Streams.Blaze,
                     System.IO.Streams.ByteString,
                     System.IO.Streams.Combinators,
                     System.IO.Streams.Handle,
                     System.IO.Streams.File,
                     System.IO.Streams.List,
                     System.IO.Streams.Zlib,
                     System.IO.Streams.Internal,
                     System.IO.Streams.Internal.BoyerMooreHorspool


  ghc-options:       -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
                     -fno-warn-unused-do-bind

  Build-depends:     base          >= 4     && <5,
                     attoparsec    >= 0.10  && <0.11,
                     blaze-builder >= 0.3.1 && <0.4,
                     bytestring    >= 0.9.2 && <0.10,
                     deepseq       >= 1.2   && <1.4,
                     directory     >= 1.1   && <2,
                     filepath      >= 1.2   && <2,
                     mtl           >= 2     && <3,
                     time          >= 1.4   && <1.5,
                     vector        >= 0.9   && <0.10,
                     zlib-bindings >= 0.1   && <0.2,

                     HUnit                      >= 1.2      && <2,
                     QuickCheck                 >= 2.3.0.2  && <3,
                     test-framework             >= 0.6      && <0.7,
                     test-framework-hunit       >= 0.2.7    && <0.3,
                     test-framework-quickcheck2 >= 0.2.12.1 && <0.3,
                     zlib                       >= 0.5      && <0.6

  if flag(portable) || os(windows)
    cpp-options: -DPORTABLE
  else
    build-depends: bytestring-mmap >= 0.2 && <0.3,
                   unix            >= 2.5 && <3.0

  other-extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    OverloadedStrings,
    ScopedTypeVariables
